@@ -23,6 +23,8 @@
 # include <config.h>
 #endif
 
+#include <oc_common.h>
+
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
