@@ -2,7 +2,7 @@
 .\" Process with
 .\" nroff -man bin2dec.3
 .\" 2011-03-10 JoungKyun Kim <htt://oops.org>
-.\" $Id: bin2dec.3,v 1.6 2011-03-09 17:32:23 oops Exp $
+.\" $Id: bin2dec.3,v 1.6.2.1 2011-03-29 10:08:14 oops Exp $
 .SH NAME
 bin2dec \- Convert binary string to 32bit integer
 .br
@@ -11,9 +11,9 @@ bin2long \- Convert binary string to 64bit integer
 .SH SYNOPSIS
 .B #include <olibc/libstring.h>
 .sp
-.BI "unsigned int bin2dec (const char * str)"
+.BI "int bin2dec (const char * str)"
 .br
-.BI "unsigned long long bin2long (const char * str)"
+.BI "long long bin2long (const char * str)"
 
 .SH Link library
 .B \-loc
@@ -45,26 +45,20 @@ The
 .BI bin2dec()
 function convert 32bit integer and, the
 .BI bin2long()
-function convert 64bit integer. The
+function convert 64bit integer. On 32bit system, the
 .BI bin2long()
 function caculate 64bit integer with high bit and low bit for 32 bit and
 64bit compatibility. So for cleary 32bit range integer, use the
 .BI bin2dec()
 function.
 
-The
-.BI bin2dec()
-and
-.BI bin2long()
-functions don't support negative integer.
-
 .SH EXAMPLE
 .nf
 #include <olibc/libstring.h>
 
 int main (void) {
-    unsigned int x = 0;
-    unsigned long long v = 0;
+    int x = 0;
+    long long v = 0;
     char y = "11011000";
     char w = "1001010100000010111110010000000000";
 
