@@ -2,7 +2,7 @@
 .\" Process with
 .\" nroff -man bin2dec.3
 .\" 2011-03-10 JoungKyun Kim <htt://oops.org>
-.\" $Id: bin2dec.3,v 1.1 2011-03-09 17:32:23 oops Exp $
+.\" $Id: bin2dec.3,v 1.1.2.1 2011-03-29 10:08:15 oops Exp $
 .SH 이름
 bin2dec \- 2진수 문자열을 4byte 정수로 변환
 .br
@@ -11,9 +11,9 @@ bin2long \- 2진수 문자열을 8byte 정수로 변환
 .SH 사용법
 .B #include <olibc/libstring.h>
 .sp
-.BI "unsigned int bin2dec (const char * str)"
+.BI "int bin2dec (const char * str)"
 .br
-.BI "unsigned long long bin2long (const char * str)"
+.BI "long long bin2long (const char * str)"
 
 .SH 라이브러리 링크
 .B \-loc
@@ -27,8 +27,8 @@ or
 에는
 .BI "LGPL2 symbol"
 이 포함되어 있으므로 이 라이브러리를
-링크하려면 LGPL2의 영향을 받는다. idn관련 api를 사용하지 않고, BSD 라이센스의 적용을
-원한다면
+링크하려면 LGPL2의 영향을 받는다. idn관련 api를 사용하지 않고,
+BSD 라이센스의 적용을 원한다면
 .B liboc.so
 나
 .B liboc.a
@@ -41,6 +41,8 @@ or
 함수는 32bit까지 처리가 가능하며,
 .BI bin2long()
 함수는 64bit까지 처리가 가능하다.
+
+32bit 시스템에서,
 .BI bin2long()
 함수는 32/64bit machine의 호환을 위하여 64bit integer를 상위/하위 비트를
 나누어서 계산을 하므로 명확하게 32bit 범위의 수를 변환한 경우에는
@@ -55,8 +57,8 @@ bin2dec() 와 bin2long() 함수는 음수를 지원하지 않는다.
 #include <olibc/libstring.h>
 
 int main (void) {
-    unsigned int x = 0;
-    unsigned long long v = 0;
+    int x = 0;
+    long long v = 0;
     char y = "11011000";
     char w = "1001010100000010111110010000000000";
 
