@@ -6,11 +6,11 @@
  * data structures, and defination macro.
  *
  * @author	JoungKyun.Kim <http://oops.org>
- * $Date: 2011-03-28 07:29:38 $
- * $Revision: 1.8.2.1 $
+ * $Date: 2011-03-29 10:08:14 $
+ * $Revision: 1.8.2.2 $
  * @attention	Copyright (c) 2011 JoungKyun.Kim all rights reserved.
  */
-/* $Id: oc_type.h.in,v 1.8.2.1 2011-03-28 07:29:38 oops Exp $ */
+/* $Id: oc_type.h.in,v 1.8.2.2 2011-03-29 10:08:14 oops Exp $ */
 
 #ifndef OC_TYPE_H
 #define OC_TYPE_H
@@ -20,6 +20,14 @@
 #include <stdlib.h>
 #include <unistd.h>
 #include <limits.h>
+
+/************ architecure **********/
+#if defined(__x86_64) || defined(__amd64)
+	#ifndef __x86_64__
+		#define __x86_64__  1
+	#endif
+#endif
+/************ architecure **********/
 
 #ifndef null
 #define null NULL
